--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
         <div class="container">
             <div class="content-box">
                 <div class="content-image">
-                    <img src="images/partagez instantanément.jpg" alt="Facilité d'échange">
+                    <img src="images/facilité d'échange.jpg" alt="facilité d'échange">
                 </div>
                 <div class="content-text">
                     <h2 class="content-title">Facilite tes échanges !</h2>
