--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
         <div class="container">
             <div class="content-box">
                 <div class="content-image">
-                    <img src="images/confidentialité.jpg" alt="Sécurité et confidentialité">
+                    <img src="images/confidentialite.jpg" alt="Sécurité et confidentialité">
                 </div>
                 <div class="content-text">
                     <h2 class="content-title">Confidentialité</h2>
@@ -979,7 +979,7 @@
                         <h3>Créer un album</h3>
                         <p>Crée un album partagé et invite tes amis en un clic.</p>
                         <div class="step-image">
-                            <img src="images/créer un album.png" alt="Création d'album" width="100%" height="auto">
+                            <img src="images/creerunalbum.png" alt="Création d'album" width="100%" height="auto">
                         </div>
                     </div>
                     <div class="step">
@@ -987,7 +987,7 @@
                         <h3>Transfère tes photos</h3>
                         <p>Ajoute tes médias sans perte de qualité.</p>
                         <div class="step-image">
-                            <img src="images/transfère tes photos.png" alt="Transfert de photos" width="100%" height="auto">
+                            <img src="images/transferetesphotos.png" alt="Transfert de photos" width="100%" height="auto">
                         </div>
                     </div>
                     <div class="step">
@@ -995,7 +995,7 @@
                         <h3>Et télécharge...</h3>
                         <p>Les photos et vidéos partagées par tes potes.</p>
                         <div class="step-image">
-                            <img src="images/récupère celles de tes potes.png" alt="Récupération de médias" width="100%" height="auto">
+                            <img src="images/recuperecellesdetespotes.png" alt="Récupération de médias" width="100%" height="auto">
                         </div>
                     </div>
                 </div>
