--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
                     <h1 class="app-title">Yuni</h1>
                     <h2 class="hero-subtitle">Le meilleur moyen d'échanger ses photos !</h2>
                     <p>
-                        Une application iOS ou Android pour créer des albums collaboratifs, transférer tes médias et récupérer ceux de tes potes en un clin d'œil.<br>
+                        Une application iOS ou Android pour créer des albums collaboratifs, transférer tes médias et récupérer ceux de tes amis en un clin d'œil.<br>
                         Innovant, hyper simple et sans perte de qualité !
                     </p>
                     <p class="beta-announcement" style="margin-top: 20px; font-weight: 700; font-size: 1.25rem; color: var(--secondary); background-color: rgba(123, 44, 191, 0.1); padding: 12px; border-radius: 10px; display: inline-block; max-width: 100%; box-sizing: border-box; text-align: center; width: auto;">
@@ -1091,9 +1091,9 @@ console.log("✅ Firebase initialisé :", app);
                 <div class="content-text">
                     <h2 class="content-title">Facilite tes échanges!</h2>
                     <h3 style="color: var(--secondary); margin-bottom: 15px; font-size: 1.5rem;">Fini les problèmes de transfert</h3>
-                    <p>Envoyer des photos à plusieurs potes, c'est souvent le chaos : fichiers compressés, manque de stockage, envois éparpillés, des dizaines de doublons…</p>
+                    <p>Envoyer des photos à plusieurs amis, c'est souvent le chaos : fichiers compressés, manque de stockage, envois éparpillés, des dizaines de doublons…</p>
                     
-                    <p>Avec YUNI, dépose tes photos et vidéos dans un album partagé et laisse tes potes récupérer ce qu'ils veulent, sans perte de qualité.</p>
+                    <p>Avec YUNI, dépose tes photos et vidéos dans un album partagé et laisse tes amis récupérer ce qu'ils veulent, sans perte de qualité.</p>
                     
                     <p>Simple, rapide, efficace.</p>
                 </div>
@@ -1209,7 +1209,7 @@ console.log("✅ Firebase initialisé :", app);
                     <div class="step">
                         <div class="step-number" style="background-color: white !important; color: #7b2cbf !important; border: 2px solid #7b2cbf !important;">4</div>
                         <h3>Et télécharge...</h3>
-                        <p>Les photos et vidéos partagées par tes potes.</p>
+                        <p>Les photos et vidéos partagées par tes amis.</p>
                         <div class="step-image">
                             <img src="images/recuperecellesdetespotes.png" alt="Récupération de médias" width="100%" height="auto">
                         </div>
