--- a/index.html
+++ b/index.html
@@ -971,8 +971,8 @@
                     <!-- Liens supprimés -->
                 </ul>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-tiktok"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.tiktok.com/@share_with_yuni"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://www.instagram.com/share_with_yuni/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="copyright">
@@ -1218,6 +1218,25 @@ console.log("✅ Firebase initialisé :", app);
             </div>
         </div>
     </section>
+
+<!-- Section Question (formulaire intégré) -->
+<section id="contact" class="content-section">
+    <div class="container">
+        <div class="glass" style="padding: 30px; margin-top: 50px; text-align: center;">
+            <h2 style="color: var(--dark); font-size: 2rem; margin-bottom: 15px;">Aidez-nous à nous améliorer !</h2>
+            <p style="margin-bottom: 25px;">Envoyez-nous votre question ou remarque via le formulaire ci-dessous.</p>
+            <p style="margin-bottom: 25px;">Nous y répondrons sur nos réseaux sociaux.</p>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScBjFH3soNkb4qbHfETo7k25UHRd2WFBAxI2gZOSgR-eLLIYQ/viewform?embedded=true" 
+            width="640" 
+            height="419" 
+            frameborder="0" 
+            marginheight="0" 
+            marginwidth="0">
+        </iframe>
+            </iframe>
+        </div>
+    </div>
+</section>
 
     <!-- Call to Action Section -->
     <section id="cta" class="cta">
