--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
-            max-width: 900px;
+            max-width: 1000px;
             margin: 0 auto;
             position: relative;
             padding: 30px 0;
@@ -568,7 +568,7 @@
             margin-top: 15px;
             border-radius: 10px;
             overflow: hidden;
-            box-shadow: 0 4px 15px rgba(36, 0, 70, 0.2);
+            box-shadow: 0 0px 0px rgba(36, 0, 70, 0.2);
             transition: transform 0.3s ease;
         }
         
@@ -1331,7 +1331,7 @@ console.log("✅ Firebase initialisé :", app);
                         <h3>Inscription</h3>
                         <p>Crée ton compte en 1 clic et accède à tes albums partagés.</p>
                         <div class="step-image">
-                            <img src="images/inscription.png" alt="Inscription" width="100%" height="auto">
+                            <img src="images/inscription.png" alt="Inscription" width="150px" height="auto">
                         </div>
                     </div>
                     <div class="step">
@@ -1339,7 +1339,7 @@ console.log("✅ Firebase initialisé :", app);
                         <h3>Créer un album</h3>
                         <p>Crée un album partagé et invite tes amis en un clic.</p>
                         <div class="step-image">
-                            <img src="images/creerunalbum.png" alt="Création d'album" width="100%" height="auto">
+                            <img src="images/creerunalbum.png" alt="Création d'album" width="150px" height="auto">
                         </div>
                     </div>
                     <div class="step">
@@ -1347,7 +1347,7 @@ console.log("✅ Firebase initialisé :", app);
                         <h3>Transfère tes photos</h3>
                         <p>Ajoute tes médias sans perte de qualité.</p>
                         <div class="step-image">
-                            <img src="images/transferetesphotos.png" alt="Transfert de photos" width="100%" height="auto">
+                            <img src="images/transferetesphotos.png" alt="Transfert de photos" width="150px" height="auto">
                         </div>
                     </div>
                     <div class="step">
@@ -1355,7 +1355,7 @@ console.log("✅ Firebase initialisé :", app);
                         <h3>Et télécharge...</h3>
                         <p>Les photos et vidéos partagées par tes amis.</p>
                         <div class="step-image">
-                            <img src="images/recuperecellesdetespotes.png" alt="Récupération de médias" width="100%" height="auto">
+                            <img src="images/recuperecellesdetespotes.png" alt="Récupération de médias" width="150px" height="auto">
                         </div>
                     </div>
                 </div>
