--- a/index.html
+++ b/index.html
@@ -464,16 +464,16 @@
 
         .features-container {
             display: flex;
-            gap: 30px;
-            justify-content: center;
+            gap: 20px;
+            justify-content: space-between;
             flex-wrap: wrap;
         }
 
         .feature-card {
             flex: 1;
-            min-width: 250px;
-            max-width: 300px;
-            padding: 30px 20px;
+            min-width: 0;
+            max-width: none;
+            padding: 20px 10px;
             text-align: center;
             transition: transform 0.3s ease;
             margin-bottom: 20px;
@@ -512,7 +512,7 @@
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
-            max-width: 1000px;
+            max-width: 900px;
             margin: 0 auto;
             position: relative;
             padding: 30px 0;
@@ -534,7 +534,7 @@
             text-align: center;
             width: 22%;
             position: relative;
-            margin-bottom: 30px;
+            margin-bottom: -30px;
         }
 
         .step-number {
@@ -1367,7 +1367,7 @@ console.log("✅ Firebase initialisé :", app);
 <section id="contact-form" class="form-section">
     <div class="container">
         <div class="form-content">
-            <h2 class="form-title">Aidez-nous à nous améliorer!</h2>
+            <h2 class="form-title">Aidez-nous à nous améliorer !</h2>
             <h3 class="form-subtitle">Des questions, des remarques, n'hésitez pas.</h3>
             <p class="form-description">
             
